refactor: change owner's table structure and related services
