# apps/api/src/dto/owner/public-owner.dto.ts
@@ -1,14 +1,7 @@
-import { DayOfWeek } from '../../common/enums/day-of-week.enum';
-
 export interface PublicOwnerDto {
   name: string;
   description?: string;
   avatar?: string;
   bookingMonthsAhead?: number;
   timezone: string;
-  workingHours: {
-    startTime: string;
-    endTime: string;
-    workingDays: DayOfWeek[];
-  };
 }
