# apps/api/src/prisma/prisma.module.ts
@@ -1,6 +1,7 @@
 import { Global, Module } from '@nestjs/common';
 import { PrismaService } from './prisma.service';
 import { OwnerService } from './models/owner.service';
+import { WorkingHoursService } from './models/working-hours.service';
 import { TimeOffService } from './models/time-off.service';
 import { BookingService } from './models/booking.service';
 import { EventTypeService } from './models/event-type.service';
@@ -10,6 +11,7 @@ import { EventTypeService } from './models/event-type.service';
   providers: [
     PrismaService,
     OwnerService,
+    WorkingHoursService,
     TimeOffService,
     BookingService,
     EventTypeService,
@@ -17,9 +19,11 @@ import { EventTypeService } from './models/event-type.service';
   exports: [
     PrismaService,
     OwnerService,
+    WorkingHoursService,
     TimeOffService,
     BookingService,
     EventTypeService,
   ],
 })
 export class PrismaModule {}
+
